# aurmr_sim

aurmr_gazebo/: CMakeLists.txt  LICENSE  README.md  package.xml
aurmr_gazebo/config/: 2f_85_gripper_controllers.yaml  tahoma.rviz  tahoma_controllers.yaml  view_tahoma_model.rviz
aurmr_gazebo/include/realsense_gazebo_plugin/: RealSenseL515Plugin.h  gazebo_ros_realsense_l515.h
aurmr_gazebo/launch/: empty_simulation.launch  fc.launch  fc_custom1.launch  fc_custom2.launch  fc_custom3.launch  view_fc.launch  view_tahoma_model.launch
aurmr_gazebo/launch/include/: common.xml  spawn_pod.xml  spawn_tahoma.xml
aurmr_gazebo/models/tahoma_materials/: aurmr.material
aurmr_gazebo/robots/: pod.gazebo.xacro  pod1.gazebo.xacro  pod2.gazebo.xacro  tahoma.gazebo.xacro  test.urdf
aurmr_gazebo/scripts/: add_pod_objects.sh
aurmr_gazebo/src/: RealSenseL515Plugin.cpp  RealSensePlugin.cpp  gazebo_ros_realsense.cpp  gazebo_ros_realsense_l515.cpp
aurmr_gazebo/urdf/: d405.gazebo.xacro  d415.gazebo.xacro  l515.gazebo.xacro  robotiq_2f_85_gazebo_macro.xacro
aurmr_gazebo/worlds/: fc.world
