<?xml version="1.0"?>
<package format="2">
  <name>aurmr_gazebo</name>
  <version>1.0.0</version>
  <description>
    Worlds, objects, robots, sensors
  </description>
  <license>MIT</license>
  <maintainer email="amazon-manipulation@cs.washington.edu">AURMR Contributors</maintainer>
  <author email="amazon-manipulation@cs.washington.edu">AURMR Contributors</author>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>moveit_ros</exec_depend>
  <exec_depend>tahoma_description</exec_depend>
  <exec_depend>tahoma_moveit_config</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>

  <build_depend>gazebo_dev</build_depend>
  <depend>roscpp</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>realsense_gazebo_plugin</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
  <gazebo_ros
          plugin_path="${prefix}/lib"
          gazebo_media_path="${prefix}"
          gazebo_model_path="${prefix}/models"/>

  </export>
</package>
